<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:background="#FFFF"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/hrtype_jkc"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/JKC_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hrtype_zfy"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/ZFY_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hrtype_xty"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/XTY_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hrtype_xyj"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/XYJ_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hrtype_ewq"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/EWQ_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hrtype_jbq"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/JBQ_content"
            android:textColor="@drawable/text_hrtype_selector"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>