<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F6"
    android:orientation="vertical" >

    <include
        android:id="@+id/findpassone_include"
        layout="@layout/titlebar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/register_edt1" >

        <EditText
            android:id="@+id/findpassone_edt_phonenum"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/findpassone_layout"
            android:background="@null"
            android:hint="@string/findpass_tv2"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColor="#4D4C4A"
            android:textColorHint="#9A9691"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/findpassone_layout"
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:orientation="horizontal" >

            <View
                android:id="@+id/findpassone_view_line"
                android:layout_width="0.7dp"
                android:layout_height="fill_parent"
                android:layout_marginRight="15dp"
                android:background="#E4E2DF" />

            <TextView
                android:id="@+id/findpassone_btn_sentcode"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/findpass_tv4"
                android:textColor="@drawable/text_sentcode_selector"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/register_edt1" >

        <EditText
            android:id="@+id/findpassone_edt_code"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/findpass_tv3"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColor="#4D4C4A"
            android:textColorHint="#9A9691"
            android:textSize="17sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="left"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:text="@string/findpass_tv5"
        android:textColor="#A9A5A0"
        android:textSize="12sp" />

    <Button
        android:id="@+id/findpassone_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_registernext_selector" />

</LinearLayout>